# config-disassembler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  release-plz.toml
.cargo/: mutants.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  mutation.yml  release-plz.yml
docs/: examples.md  formats.md  xml.md
fixtures/ini/basic-sections/: case.json  input.ini
fixtures/json/array-with-unique-id/: case.json  input.json
fixtures/json/deeply-nested/: input.json
fixtures/json/null-and-empty/: input.json
fixtures/json/numbers/: input.json
fixtures/json/object-with-mixed-scalars-and-objects/: case.json  input.json
fixtures/json/unicode-keys/: case.json  input.json
fixtures/json5/comments-and-trailing-commas/: case.json  input.json5
fixtures/json5/single-quoted-strings/: input.json5
fixtures/json5/unquoted-keys/: input.json5
fixtures/jsonc/comments-and-trailing-commas/: input.jsonc
fixtures/real-world/cargo-toml/: case.json  input.toml
fixtures/real-world/docker-compose/: input.yaml
fixtures/real-world/eslintrc/: input.json5
fixtures/real-world/github-actions-workflow/: input.yaml
fixtures/real-world/kubernetes-deployment/: input.yaml
fixtures/real-world/openapi-spec/: input.yaml
fixtures/real-world/package-json/: input.json
fixtures/real-world/renovate-config/: input.json5
fixtures/real-world/tsconfig/: input.json5
fixtures/toml/array-of-tables/: case.json  input.toml
fixtures/toml/basic-table/: case.json  input.toml
fixtures/xml/sidecar/: DropboxFileManagerHandler.externalServiceRegistration-meta.xml
src/: cli.rs  disassemble.rs  error.rs  format.rs  ignore_file.rs  lib.rs  main.rs  meta.rs  reassemble.rs  xml_cmd.rs
src/xml/: cli.rs  mod.rs  multi_level.rs  types.rs  verify.rs
src/xml/builders/: build_xml_string.rs  (+4 more)
tests/: cli.rs  fixtures.rs  roundtrip.rs  xml_disassemble_reassemble.rs
(+15 files in other folders)
