[package]
name = "config-disassembler"
version = "0.2.0"
edition = "2021"
description = "Disassemble config files into smaller files and reassemble on demand."
repository = "https://github.com/mcarvin8/config-disassembler"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "config_disassembler"
path = "src/lib.rs"

[[bin]]
name = "config-disassembler"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
json5 = "1"
toml = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
sha2 = "0.11"
quick-xml = { version = "0.39", features = ["serialize"] }
ignore = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
walkdir = "2"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
